# closo

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  notes.txt  plan_stripe.md  prompt  todo.md
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/config/: slaves.json
backend/app/entities/: comment.py  group.py  groupmember.py  like.py  media.py  payment.py  post.py  role.py  user.py
backend/app/repositories/: base_repository.py  comment_repository.py  group_repository.py  groupmember_repository.py  like_repository.py  media_repository.py  payment_repository.py  post_repository.py  user_repository.py
backend/app/repositories/auth/: role_repository.py  user_repository.py
backend/app/routers/: admin.py  auth.py  comment.py  group.py  groupmember.py  like.py  media.py  payment.py  post.py  storage.py  users.py
backend/app/services/: stripe_service.py
backend/app/utils/: file_validation.py  image_compression.py  seed.py
backend/app/utils/auth/: auth.py  roles.py
backend/app/utils/core/: config.py  database.py
backend/app/utils/slave_manager/: orchestrator.py
backend/scripts/: deploy_docker.bat
bdd/: .env.example
front/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/: admin.html  app.html  cgu.html  group.html  group_info.html  index.html  login.html  mentions-legales.html  profile.html  publish.html  register.html
frontend_backup/: .env.example  (+5 more)
(+88 files in other folders)
